--- a/src/app/shared/admin/admin-forms-list-container/admin-forms-list-container.component.html
+++ b/src/app/shared/admin/admin-forms-list-container/admin-forms-list-container.component.html
@@ -1,3 +1,10 @@
-<mr-admin-forms-list
-  (createForm)="handleCreateForm($event)"
-></mr-admin-forms-list>
+<ng-container *ngIf="{
+  canCloseModal: (canCloseModal$ | async),
+  forms: (forms$ | async)
+} as data">
+  <mr-admin-forms-list
+    [canCloseModal]="data.canCloseModal"
+    [formRequests]="data.forms"
+    (createForm)="handleCreateForm($event)"
+  ></mr-admin-forms-list>
+</ng-container>
