--- a/src/app/ui/blocks/admin-forms-list/admin-forms-list.component.html
+++ b/src/app/ui/blocks/admin-forms-list/admin-forms-list.component.html
@@ -6,12 +6,9 @@
 ></mr-button>
 <mr-table
   [headers]="[
-    ['', '0.5rem'],
-    ['Nombre', '3rem'],
-    ['Apellido', '3rem'],
-    ['Contacto', '3rem'],
-    ['Descripción', '10rem'],
-    ['Correo', '7rem'],
+    ['Titulo', '10rem'],
+    ['Asunto', '10rem'],
+    ['Plantilla', '10rem'],
     ['Acciones', '3rem']
   ]"
   [items]="formRequests || []"
@@ -23,7 +20,25 @@
     <mr-text
       [color]="'initial'"
       [type]="'line'"
-      [text]=""
+      [text]="request?.title"
+      [size]="'base'"
+      [weight]="'regular'"
+    ></mr-text>
+  </td>
+  <td class="admin-form-requests-list-tmpl__td">
+    <mr-text
+      [color]="'initial'"
+      [type]="'line'"
+      [text]="request?.subject"
+      [size]="'base'"
+      [weight]="'regular'"
+    ></mr-text>
+  </td>
+  <td class="admin-form-requests-list-tmpl__td">
+    <mr-text
+      [color]="'initial'"
+      [type]="'line'"
+      [text]="request?.plantilla"
       [size]="'base'"
       [weight]="'regular'"
     ></mr-text>
