The missing information has been added to the user's profile

--- a/src/app/ui/blocks/profile-current-user/profile-current-user.component.html
+++ b/src/app/ui/blocks/profile-current-user/profile-current-user.component.html
@@ -7,6 +7,15 @@
         [cities]="cities"
         [states]="states"
         [hobbies]="hobbies"
+        [documents]="documents"
+        [education]="education"
+        [ethnicGroups]="ethnicGroups"
+        [familyCore]="familyCore"
+        [familyIncome]="familyIncome"
+        [housingType]="housingType"
+        [maritalStatus]="maritalStatus"
+        [stratum]="stratum"
+        [sustenting]="sustenting"
         (dataOutput)="handleCreateUser($event)"
         (formUpdate)="handleLoadCities($event)"
         (initForm)="handleLoadCities($event)"
