--- a/src/app/ui/blocks/profile-current-user/profile-current-user.component.scss
+++ b/src/app/ui/blocks/profile-current-user/profile-current-user.component.scss
@@ -3,6 +3,7 @@
 .profile-current-user {
   position: relative;
   display: flex;
+  margin-top: styles.func-toRem(5);
 
   &__background {
     position: absolute;
@@ -38,6 +39,8 @@
 
 @media (min-width: styles.$bkp-tablet) {
   .profile-current-user {
+    margin-top: styles.func-toRem(12.5);
+    
     &__form {
       height: 100vh;
     }
