--- a/src/app/shared/profile/profile-current-user-container/profile-current-user-container.component.html
+++ b/src/app/shared/profile/profile-current-user-container/profile-current-user-container.component.html
@@ -2,13 +2,31 @@
   user: (user$ | async),
   hobbies: (hobbies$ | async),
   cities: (cities$ | async),
-  states: (states$ | async)
+  states: (states$ | async),
+  documents: (documents$ | async),
+  education: (education$ | async),
+  ethnicGroups: (ethnicGroups$ | async),
+  familyCore: (familyCore$ | async),
+  familyIncome: (familyIncome$ | async),
+  housingType: (housingType$ | async),
+  maritalStatus: (maritalStatus$ | async),
+  stratum: (stratum$ | async),
+  sustenting: (sustenting$ | async)
 } as data">
   <mr-profile-current-user
     [user]="data.user"
     [hobbies]="data.hobbies"
     [cities]="data.cities"
     [states]="data.states"
+    [documents]="data.documents"
+    [education]="data.education"
+    [ethnicGroups]="data.ethnicGroups"
+    [familyCore]="data.familyCore"
+    [familyIncome]="data.familyIncome"
+    [housingType]="data.housingType"
+    [maritalStatus]="data.maritalStatus"
+    [stratum]="data.stratum"
+    [sustenting]="data.sustenting"
     (createUser)="handleUpdateUser($event)"
     (selectedState)="handleLoadCities($event)"
   ></mr-profile-current-user>
