--- a/src/app/ui/blocks/profile-current-user/profile-current-user.component.scss
+++ b/src/app/ui/blocks/profile-current-user/profile-current-user.component.scss
@@ -49,6 +49,14 @@
 
 @media (max-width: styles.$bkp-mobile) {
   .profile-current-user {
+    &__back {
+      & .button-icon {
+        height: styles.func-toRem(3) !important;
+        width: styles.func-toRem(3) !important;
+        font-size: styles.func-toRem(1.20);
+      }
+    }
+
     &__form {
       padding-top: 80px;
     }
