--- a/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
+++ b/src/app/ui/blocks/admin-users-list/admin-users-list.component.html
@@ -93,6 +93,15 @@
       [hobbies]="hobbies"
       [states]="states"
       [cities]="cities"
+      [documents]="documents"
+      [education]="education"
+      [ethnicGroups]="ethnicGroups"
+      [familyCore]="familyCore"
+      [familyIncome]="familyIncome"
+      [housingType]="housingType"
+      [maritalStatus]="maritalStatus"
+      [stratum]="stratum"
+      [sustenting]="sustenting"
       [canResetForm]="canCloseModal"
       (dataOutput)="handleCreateUser($event)"
       (formUpdate)="handleSelectState($event)"
