--- a/src/app/ui/blocks/profile-user/profile-user.component.html
+++ b/src/app/ui/blocks/profile-user/profile-user.component.html
@@ -1,6 +1,6 @@
 <div class="profile-user">
   <figure class="profile-user__background">
-    <mr-image [image]="'assets/img/profile.svg'"></mr-image>
+    <mr-image [image]="'assets/img/wave-contact.svg'"></mr-image>
   </figure>
   <mr-card class="profile-user__form">
     <ng-container>
