--- a/src/app/shared/admin/admin-forms-list-container/admin-forms-list-container.component.html
+++ b/src/app/shared/admin/admin-forms-list-container/admin-forms-list-container.component.html
@@ -1,12 +1,14 @@
 <ng-container *ngIf="{
   canCloseModal: (canCloseModal$ | async),
   forms: (forms$ | async),
-  form: (form$ | async)
+  form: (form$ | async),
+  templates: (templates$ | async)
 } as data">
   <mr-admin-forms-list
     [canCloseModal]="data.canCloseModal"
     [formRequests]="data.forms"
     [formToUpdate]="data.form"
+    [templates]="data.templates"
     (createForm)="handleCreateForm($event)"
     (updateForm)="handleUpdateForm($event)"
     (deleteForm)="handleDeleteForm($event)"
