--- a/src/app/ui/blocks/channels-content/channels-content.component.html
+++ b/src/app/ui/blocks/channels-content/channels-content.component.html
@@ -29,13 +29,7 @@
       <div class="channels-content__notices">
         <mr-notice
           *ngFor="let notice of notices"
-          [image]="notice?.icon?.url"
-          [title]="notice?.title"
-          [description]="notice?.description"
-          [channel]="notice?.channel"
-          [isLink]="notice?.isLink"
-          [url]="notice?.url"
-          [id]="notice?.id"
+          [notice]="notice"
         ></mr-notice>
       </div>
     </ng-container>
