--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -146,7 +146,7 @@
       <mr-sub-form-input 
         [type]="'number'"
         [label]="'Número de identificación'"
-        [formControlName]="form.formControlNames.document"
+        [formControlName]="form.formControlNames.documentNumber"
       ></mr-sub-form-input>
 
       <mr-sub-form-input 
