--- a/src/app/ui/blocks/notices-content/notices-content.component.html
+++ b/src/app/ui/blocks/notices-content/notices-content.component.html
@@ -112,7 +112,7 @@
 
   <figure class="notices-content__wave">
     <mr-image
-      [image]="'assets/img/' + wave + '.svg'"
+      [image]="'assets/img/wave-' + channel?.type + '.svg'"
       [alt]="'bg-wave'"
     ></mr-image>
   </figure>
