--- a/src/app/ui/_styles/_forms.scss
+++ b/src/app/ui/_styles/_forms.scss
@@ -11,7 +11,7 @@
 
     &__label {
       background-color: color.$bg-lighter;
-      border-radius: box.$rad-rounded;
+      border-radius: box.$rad-large;
       border: box.$bor-solid color.$bor-light;
       column-gap: box.$pad-half;
       padding: box.$pad-half;
