--- a/src/app/ui/forms/form-forms-requests/form-fields/form-fields.component.html
+++ b/src/app/ui/forms/form-forms-requests/form-fields/form-fields.component.html
@@ -4,7 +4,9 @@
     *ngFor="let linkControl of form.formGroup.controls.value.controls; trackBy: trackIndex; index as i"
     [formArrayName]="form.formControlNames.value"
   >
-    <div>
+    <div  class="form-fields__options">
+      <mr-text [text]="'Campo #' + (i+1)" [weight]="'bold'" [size]="'small'"></mr-text>
+
       <mr-form-field 
         [formControl]="linkControl" 
         (deleteControl)="formManager.delete(i)"
