--- a/src/app/ui/forms/form-forms-requests/form-options/form-options.component.scss
+++ b/src/app/ui/forms/form-forms-requests/form-options/form-options.component.scss
@@ -7,6 +7,9 @@
   padding: 0;
   margin: 0;
   border: 0;
+  margin-top: styles.$box-pad-base;
+  grid-template-columns: auto min-content;
+  align-items: center;
 
   &__options {
     display: grid;
