--- a/src/app/ui/blocks/notice-info/notice-info.component.scss
+++ b/src/app/ui/blocks/notice-info/notice-info.component.scss
@@ -55,6 +55,13 @@
     }
   }
 
+  &__text-title {
+    .text {
+      font-size: 2.5rem;
+      line-height: 3.25rem;
+    }
+  }
+
   &__image-notice {
     position: relative;
     width: 50%;
