--- a/src/app/ui/forms/sub-form-location/sub-form-location.component.html
+++ b/src/app/ui/forms/sub-form-location/sub-form-location.component.html
@@ -3,7 +3,7 @@
     <mr-sub-form-select
       [canDeleteText]="true"
       [isSearchable]="true"
-      [label]="'Departamento'"
+      [label]="'Departamento*'"
       [placeholder]="'Seleccionar...'"
       [options]="states"
       [formControlName]="form.formControlNames.state"
@@ -12,7 +12,7 @@
     <mr-sub-form-select
       [canDeleteText]="true"
       [isSearchable]="true"
-      [label]="'Ciudad'"
+      [label]="'Ciudad*'"
       [placeholder]="'Seleccionar...'"
       [options]="cities"
       [formControlName]="form.formControlNames.city"
