the home welcome message responsive was corrected

--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -3,7 +3,7 @@
     <mr-card>
       <ng-container>
         <mr-text 
-          [type]="'line'" 
+          [type]="'text'" 
           [weight]="'bold'" 
           [text]="'¡Bienvenida ' + currentUser?.firstName + ' ' + currentUser?.lastName + ' a esta comunidad!'">
         </mr-text>
