--- a/src/app/ui/blocks/home-content/home-content.component.scss
+++ b/src/app/ui/blocks/home-content/home-content.component.scss
@@ -69,9 +69,12 @@
   }
 
   &__welcome {
-    text-align: left;
-    width: fit-content;
+    text-align: center;
     padding: styles.$box-pad-base styles.$box-pad-none;
+
+    .text{
+      color: styles.$color-typo-base !important;
+    }
   }
 }
 
