the home welcome message responsive was corrected

--- a/src/app/ui/blocks/aside-menu/aside-menu.component.scss
+++ b/src/app/ui/blocks/aside-menu/aside-menu.component.scss
@@ -11,7 +11,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    min-height: calc(100vh - 80px);
+    height: calc(100vh - 80px);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
