--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -21,7 +21,7 @@
       ></mr-sub-form-input>
 
       <mr-sub-form-input 
-        [type]="'input'"
+        [type]="'number'"
         [label]="'Edad*'"
         [formControlName]="form.formControlNames.age"
       ></mr-sub-form-input>
