--- a/src/app/ui/blocks/notice-info/notice-info.component.scss
+++ b/src/app/ui/blocks/notice-info/notice-info.component.scss
@@ -187,6 +187,14 @@
   .notices-content {
     &__image-notice {
       height: styles.func-toRem(20.25);
+
+      &--shadow {
+        background-color: transparent !important;
+      }
+
+      .image {
+        object-fit: contain;
+      }
     }
   }
 }
