--- a/src/app/ui/blocks/profile-user/profile-user.component.scss
+++ b/src/app/ui/blocks/profile-user/profile-user.component.scss
@@ -7,12 +7,14 @@ a {
 .profile-user {
   position: relative;
   display: flex;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin-top: styles.func-toRem(5);
 
   &__background {
     position: absolute;
     z-index: -1;
-    bottom: -4px;
+    bottom: 0;
     left: 0;
     width: 100%;
   }
@@ -30,12 +32,11 @@ a {
   }
 
   &__form {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 80px;
-    height: 100vh;
   }
 
   &__photo {
