--- a/src/app/ui/elements/dropdown/dropdown.component.scss
+++ b/src/app/ui/elements/dropdown/dropdown.component.scss
@@ -35,7 +35,7 @@
       position: relative;
       height: 20px;
       overflow: hidden;
-      z-index: styles.$box-z-2;
+      z-index: 1;
 
       &:hover {
         overflow: visible;
