The button was added to export the users in an excel

--- a/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
+++ b/src/app/shared/admin/admin-users-list-container/admin-users-list-container.component.html
@@ -36,5 +36,6 @@
       (deleteUser)="handleDeleteUser($event)"
       (loadUserToUpdate)="handleLoadUserToUpdate($event)"
       (updateUser)="handleUpdateUser($event)"
+      (downloadUsers)="handleDownloadUsers()"
     ></mr-admin-users-list>
 </ng-container>
