--- a/src/app/ui/blocks/admin-request-list/admin-request-list.component.html
+++ b/src/app/ui/blocks/admin-request-list/admin-request-list.component.html
@@ -1,53 +1,7 @@
-<mr-table
-  [headers]="[
-    ['Titulo', '10rem'],
-    ['Asunto', '10rem'],
-    ['Plantilla', '10rem'],
-    ['Campos', '10rem'],
-  ]"
-  [items]="requests || []"
-  [itemTemplateRef]="userTemplate"
-></mr-table>
-
-<ng-template #userTemplate let-request="item" let-index="index">
-  <td class="admin-requests-list-tmpl__td">
-    <mr-text
-      [color]="'initial'"
-      [type]="'line'"
-      [text]="request.title"
-      [size]="'base'"
-      [weight]="'regular'"
-    ></mr-text>
-  </td>
-  <td class="admin-requests-list-tmpl__td">
-    <mr-text
-      [color]="'initial'"
-      [type]="'line'"
-      [text]="request.subject"
-      [size]="'base'"
-      [weight]="'regular'"
-    ></mr-text>
-  </td>
-  <td class="admin-requests-list-tmpl__td">
-    <mr-text
-      [color]="'initial'"
-      [type]="'line'"
-      [text]="request.template"
-      [size]="'base'"
-      [weight]="'regular'"
-    ></mr-text>
-  </td>
-  <td class="admin-requests-list-tmpl__td">
-    <mr-text
-      *ngFor="let field of request?.fields"
-      [color]="'initial'"
-      [type]="'line'"
-      [text]="field?.label +' '+ field?.value"
-      [size]="'base'"
-      [weight]="'regular'"
-    ></mr-text>
-  </td>
-</ng-template>
+<mr-requests-list 
+  [requests]="requests"
+  (clickedDelete)="handleDeleteRequest($event)"
+></mr-requests-list>
 
 <mr-button-icon
   [icon]="'arrow-left'"
