--- a/src/app/ui/blocks/form-detail/form-detail.component.html
+++ b/src/app/ui/blocks/form-detail/form-detail.component.html
@@ -9,3 +9,9 @@
   </mr-card>
   <mr-home-background class="form-detail__background"></mr-home-background>
 </div>
+
+<mr-button-icon
+  [icon]="'arrow-left'"
+  (clicked)="handleGoBack()"
+  class="admin-users__back"
+></mr-button-icon>
