--- a/src/app/ui/forms/sub-form-input/sub-form-input.component.html
+++ b/src/app/ui/forms/sub-form-input/sub-form-input.component.html
@@ -6,7 +6,7 @@
     <i *ngIf="!!icon" class="sub-form-input__icon {{icon}}"></i>
     <div class="sub-form-input__text">
       <mr-text
-        [type]="'line'"
+        [type]="'text'"
         [size]="'base'"
         [weight]="'bold'"
         [text]="label"
