--- a/src/app/ui/forms/form-user/form-user.component.html
+++ b/src/app/ui/forms/form-user/form-user.component.html
@@ -33,11 +33,11 @@
       ></mr-sub-form-input>
 
       <mr-sub-form-select
-      [label]="'Estado civil*'"
-      [placeholder]="'Seleccionar...'"
-      [options]="maritalStatus"
-      [isSearchable]="true"
-      [formControlName]="form.formControlNames.maritalStatus"
+        [label]="'Estado civil*'"
+        [placeholder]="'Seleccionar...'"
+        [options]="maritalStatus"
+        [isSearchable]="true"
+        [formControlName]="form.formControlNames.maritalStatus"
       ></mr-sub-form-select>
       
       
@@ -183,7 +183,8 @@
     ></mr-sub-form-file>
   </fieldset>
 
-  <mr-button 
+  <mr-button
+    class="form-user__button"
     [label]="'Guardar'"
     [isDisabled]="form.formGroup.invalid || form.formGroup.disabled"
     (clicked)="manualSave$.next()"
