Slides crud was completed

--- a/src/app/shared/admin/admin-content-container/admin-content-container.component.html
+++ b/src/app/shared/admin/admin-content-container/admin-content-container.component.html
@@ -17,5 +17,9 @@
     <mr-admin-requests-list-container
       *ngIf="tabs.active === tabEnum.requests"
     ></mr-admin-requests-list-container>
+
+    <mr-admin-slides-list-container
+    *ngIf="tabs.active === tabEnum.slides"
+  ></mr-admin-slides-list-container>
   </mr-tabs>
 </ng-container>
