--- a/src/app/ui/elements/request/request.component.html
+++ b/src/app/ui/elements/request/request.component.html
@@ -15,7 +15,7 @@
   <ng-container>
     <mr-text
       class="modal__label"
-      [text]="'¿Estás seguro de que deseas eliminar este comunicado?'"
+      [text]="'¿Estás seguro de que deseas eliminar esta solicitud?'"
       [weight]="'bold'"
       [size]="'medium'"
     ></mr-text>
