--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -1,4 +1,5 @@
 <div class="home-content">
+  <mr-home-background class="home-content__background"></mr-home-background>
   <div class="home-content__welcome">
     <mr-card>
       <ng-container>
@@ -10,73 +11,8 @@
       </ng-container>
     </mr-card>
   </div>
-  <mr-home-background class="home-content__background"></mr-home-background>
-  <div class="home-content__channels">
-    <div
-      class="home-content__channel home-content__channel--red"
-      (click)="navigateToChannel('channels/network')"
-    >
-      <figure class="home-content__logo">
-        <mr-image [image]="'assets/img/red.png'" [alt]="'red'"></mr-image>
-      </figure>
-      <mr-text
-        [text]="'Red'"
-        [size]="'extra-large'"
-        [weight]="'bold'"
-      ></mr-text>
-    </div>
 
-    <div
-      class="home-content__channel home-content__channel--oportunidades"
-      (click)="navigateToChannel('channels/opportunities')"
-    >
-      <figure class="home-content__logo">
-        <mr-image
-          [image]="'assets/img/oportunidades.png'"
-          [alt]="'oportunidades'"
-        ></mr-image>
-      </figure>
-      <mr-text
-        [text]="'Oportunidades'"
-        [size]="'extra-large'"
-        [weight]="'bold'"
-      ></mr-text>
-    </div>
-
-    <div
-      class="home-content__channel home-content__channel--formacion"
-      (click)="navigateToChannel('channels/training')"
-    >
-      <figure class="home-content__logo">
-        <mr-image
-          [image]="'assets/img/formacion.png'"
-          [alt]="'formacion'"
-        ></mr-image>
-      </figure>
-      <mr-text
-        [text]="'Formación'"
-        [size]="'extra-large'"
-        [weight]="'bold'"
-      ></mr-text>
-    </div>
-
-    <div
-      class="home-content__channel home-content__channel--emprendimiento"
-      (click)="navigateToChannel('channels/business')"
-    >
-      <figure class="home-content__logo">
-        <mr-image
-          [image]="'assets/img/emprendimiento.png'"
-          [alt]="'emprendimiento'"
-        ></mr-image>
-      </figure>
-      <mr-text
-        [text]="'Emprendimiento'"
-        [size]="'extra-large'"
-        [weight]="'bold'"
-      ></mr-text>
-    </div>
-  </div>
+  <mr-slider [items]="slides"></mr-slider>
 
   <div class="home-content__description">
     <mr-card>
