--- a/src/app/ui/blocks/home-content/home-content.component.html
+++ b/src/app/ui/blocks/home-content/home-content.component.html
@@ -26,4 +26,71 @@
       </ng-container>
     </mr-card>
   </div>
+
+  <div class="home-content__channels">
+    <div
+      class="home-content__channel home-content__channel--red"
+      (click)="navigateToChannel('channels/network')"
+    >
+      <figure class="home-content__logo">
+        <mr-image [image]="'assets/img/red.png'" [alt]="'red'"></mr-image>
+      </figure>
+      <mr-text
+        [text]="'Red'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
+    </div>
+
+    <div
+      class="home-content__channel home-content__channel--oportunidades"
+      (click)="navigateToChannel('channels/opportunities')"
+    >
+      <figure class="home-content__logo">
+        <mr-image
+          [image]="'assets/img/oportunidades.png'"
+          [alt]="'oportunidades'"
+        ></mr-image>
+      </figure>
+      <mr-text
+        [text]="'Oportunidades'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
+    </div>
+
+    <div
+      class="home-content__channel home-content__channel--formacion"
+      (click)="navigateToChannel('channels/training')"
+    >
+      <figure class="home-content__logo">
+        <mr-image
+          [image]="'assets/img/formacion.png'"
+          [alt]="'formacion'"
+        ></mr-image>
+      </figure>
+      <mr-text
+        [text]="'Formación'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
+    </div>
+
+    <div
+      class="home-content__channel home-content__channel--emprendimiento"
+      (click)="navigateToChannel('channels/business')"
+    >
+      <figure class="home-content__logo">
+        <mr-image
+          [image]="'assets/img/emprendimiento.png'"
+          [alt]="'emprendimiento'"
+        ></mr-image>
+      </figure>
+      <mr-text
+        [text]="'Emprendimiento'"
+        [size]="'extra-large'"
+        [weight]="'bold'"
+      ></mr-text>
+    </div>
+  </div>
 </div>
